// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkeletonCircle Snapshots No props 1`] = `
<div
  className="sc-AxjAm ibqlzg sc-AxirZ egQmmu"
/>
`;

exports[`SkeletonCircle Snapshots with className 1`] = `
<div
  className="sc-AxjAm ibqlzg sc-AxirZ egQmmu className"
/>
`;

exports[`SkeletonCircle Snapshots with height 1`] = `
<div
  className="sc-AxjAm ibqlzg sc-AxirZ eEPvhF className"
  height={100}
/>
`;

exports[`SkeletonCircle Snapshots with width 1`] = `
<div
  className="sc-AxjAm ibqlzg sc-AxirZ ljdSpy className"
  width={100}
/>
`;
